--- a/Linh Nguyen - DS Challenge.ipynb
+++ b/Linh Nguyen - DS Challenge.ipynb
@@ -764,7 +764,7 @@
     "---\n",
     "## Logistic Regression\n",
     "\n",
-    "#### Pre-processing"
+    "Logistic regression requires categorical variables to be label encoded or one-hot encoded. We can use dummy variables to one-hot encode the data."
    ]
   },
   {
@@ -1138,6 +1138,13 @@
     "data_d = pd.get_dummies(df, columns = ['cat1', 'cat2', 'cat3', 'cat4', 'cat5'], drop_first=True)\n",
     "data_d = data_d.drop(columns = ['ID'])\n",
     "data_d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We employ an 80/20 train/test split, and then train the Logistic Regression model for the classification task. We calculate accuracy, F1, precision, and AUC metrics to evaluate the performance of the model on the testing data."
    ]
   },
   {
